# event_trees

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.test.yml  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 042cfb205e6c_added_name_to_events.py  0c828e7599df_delete_event_status_default_value.py  2921a24441cc_delete_fk_in_parent_id.py  4a2f43ef5b8c_init.py  6fe950f94c5e_init_revision.py  813dc4a899e4_init.py  a8dc69a592dd_change_parent_id_to_nullable_true.py
src/: main.py
src/api/v1/: auth_routers.py  events_routers.py  profile_routers.py  public_routers.py  user_routers.py
src/core/: config.py  logger.py
src/models/: sql_models.py
src/repositories/: abstract_repo.py  events_repo.py  redis_repo.py  users_repo.py
src/schemas/: event_schemas.py  other_schemas.py  user_schemas.py
src/services/: auth_service.py  events_service.py  profile_service.py  public_service.py
src/utils/: auth_utils.py  dependencies.py  events_utils.py  excepts.py  public_utils.py  redis_module.py  session.py
tests/: conftest.py  test_db.py  test_service.py
tests/unit/: test_service.py
